# movatic

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/00000000000000_create_stations/: down.sql  up.sql
src/: controllers.rs  main.rs  models.rs  schema.rs  services.rs
