[package]
name = "gbfs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.87"
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
diesel = { version = "2.2.0", features = ["postgres", "numeric", "time", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["local-offset", "parsing", "serde", "serde-human-readable"] }
